--- a/src/stylesheets/theme/theme.layout.list.styl
+++ b/src/stylesheets/theme/theme.layout.list.styl
@@ -48,19 +48,14 @@
 
   aside & li
     background: none
-    &:not(:first-child)
-      border-top: solid 1px  lighten(COLOR, 5%)
-    &:not(:last-child)
-      border-bottom: solid 1px darken(COLOR, 20%)
-    &:active
-      background: darken(COLOR, 5%)
-    &.active
-      background: THEME
+    &, & a
+      color: lighten(COLOR, 25%)
     &.active, &:active
       border-color: transparent
-      & strong, & small, & .icon
-        color: #fff
-    & strong
-      color: lighten(COLOR, 75%)
+      background-color: lighten(COLOR, 5%)
+      & :not(.icon)
+        color: WHITE
+      & .icon
+        color: THEME
     & small, .icon
-      color: lighten(COLOR, 40%)
+      color: lighten(COLOR, 25%)
