--- a/src/stylesheets/theme/theme.media.styl
+++ b/src/stylesheets/theme/theme.media.styl
@@ -11,4 +11,4 @@
   body
     & > section
       & > header
-        border-radius (BORDER_radius * 2.5) (BORDER_radius * 2.5) 0 0
+        border-radius BORDER_radius BORDER_radius 0 0
