--- a/src/stylesheets/theme/theme.layout.nav.styl
+++ b/src/stylesheets/theme/theme.layout.nav.styl
@@ -18,25 +18,33 @@ nav
 
   section > footer > & > a, &[data-control=groupbar] > a
     color: NAV_LINK
+
+    & .icon, abbr
+      text-shadow: 0 1px darken(COLOR, 25%)
     & abbr
-      font-weight: 700 !important
+      font-weight: 600
     &.active
       color: NAV_LINK_ACTIVE
 
   section > &[data-control=groupbar] > a.active
     transition box-shadow TRANSITION_time TRANSITION_easing
-    box-shadow inset 0 -4px 0 THEME
+    box-shadow inset 0 -3px 0 THEME
 
   section > footer > & > a
-    box-shadow inset 0 1px 0 #000, inset 0 2px 0 lighten(COLOR, 20%)
+    box-shadow inset 0 1px 0 darken(COLOR, 50%), inset 0 2px 0 lighten(COLOR, 15%)
     &.active
       box-shadow inset 0 0 16px darken(COLOR, 75%)
       background-color: darken(COLOR, 10%)
 
-  aside & a
-    color: lighten(COLOR, 20%)
-    &:active
-      color: lighten(COLOR, 50%)
+  aside &
+    & a:not(.button)
+      color: THEME
+    & .button, button
+      color: lighten(COLOR, 20%)
+    & a, button
+      &:active
+        color: WHITE
+        text-shadow: 0 0 1em WHITE
 
   &[data-control=menu]
     background: COLOR
