--- a/src/stylesheets/theme/theme.layout.styl
+++ b/src/stylesheets/theme/theme.layout.styl
@@ -14,7 +14,6 @@ body > section
   & > header
     C = THEME
     background-color: THEME
-    // box-shadow 0 2px 0 rgba(0,0,0,0.15), inset 0 1px 0 lighten(C, 20%), inset 0 -1px 0 darken(C, 20%)
     box-shadow 0 1px 2px rgba(0,0,0,0.2), inset 0 1px 1px lighten(C, 25%), inset 0 -1px 0 darken(C, 20%)
     color: #fff
 
@@ -35,12 +34,11 @@ body > section
 
 body > aside
   background-color: COLOR
-  color: #fff
-  C = darken(COLOR, 20%)
-  & > header, > footer
-    background-color: C
+  color: WHITE
+  & > header, & > footer
+    background-color: darken(COLOR, 15%)
   & > header
-    box-shadow 0 2px 0 rgba(0,0,0,0.15), inset 0 1px 0 lighten(C, 10%), inset 0 -1px 0 darken(C, 20%)
+    box-shadow: inset 0 1px COLOR, inset 0 1px darken(COLOR, 25%)
 
 body > * > header > .title
-  font-weight: 700
+  font-weight: 600
