--- a/src/stylesheets/theme/theme.widget.button.styl
+++ b/src/stylesheets/theme/theme.widget.button.styl
@@ -8,27 +8,31 @@
  */
 
 .button, button
-  border-radius (BORDER_radius * 2)
   &, abbr
     font-weight: 600
 
-header
+section header
   & .button, button
     color: #fff
-    background-color: darken(THEME, 15%)
-    box-shadow 0 1px 0 lighten(THEME, 15%), inset 0 1px 0 darken(THEME, 35%)
+    // background-color: lighten(THEME, 10%)
+    box-shadow: inset 0 0 0 2em rgba(0,0,0,0.05), inset 0 0 1px rgba(0,0,0,0.1)
     &:active
-      background-color: darken(THEME, 40%)
+      background-color: darken(THEME, 25%)
+      box-shadow: none
 
 article
   & .button, button
+    border-radius (BORDER_radius * 2)
     color: #fff !important
-    box-shadow inset 0 1px 0 rgba(255,255,255,0.15), 0 1px 1px rgba(0,0,0,0.15)
-    border: solid 1px rgba(0,0,0,0.1)
-    text-shadow: 0 1px 0 rgba(0,0,0,0.1)
+
+    box-shadow: inset 0 0.1em 0 rgba(255,255,255,0.1), inset 0 -0.15em 0 rgba(0,0,0,0.2), 0 0.15em 0 rgba(0,0,0,0.075)
+    -webkit-font-smoothing: antialiased
+    text-shadow: 0 0.1em 0 rgba(0,0,0,0.1)
+
+    &:hover
+        box-shadow: inset 0 0 5em rgba(0,0,0,0.15), inset 0 -0.15em 0 rgba(0,0,0,0.2), 0 0.15em 0 rgba(0,0,0,0.075)
     &:active
-      box-shadow inset 0 0 128px rgba(0,0,0,0.25)
-      border-color: none
+      box-shadow inset 0 0 5em rgba(0,0,0,0.3), inset 0 0.15em 0 rgba(0,0,0,0.1)
 
     & .icon
       opacity: 0.65
