--- a/src/stylesheets/lungo.animation.slide.styl
+++ b/src/stylesheets/lungo.animation.slide.styl
@@ -4,35 +4,37 @@ SCALE = .8
 
 [data-transition="slide"]
   &[data-direction="in"]
+    z-index: 2
     vendor(animation-name, slideIn)
   &[data-direction="out"]
+    z-index: 1
     vendor(animation-name, slideOut)
   &[data-direction="back-in"]
+    z-index: 1
     vendor(animation-name, slideBackIn)
   &[data-direction="back-out"]
+    z-index: 2
     vendor(animation-name, slideBackOut)
 
 @keyframes slideIn
   from { transform: translateX(100%) }
   to   { transform: translateX(0) }
 
+// @keyframes slideOut
+//   from { transform: scale(1) }
+//   to   { transform: scale(SCALE) }
 @keyframes slideOut
-  from { transform: scale(1) }
-  to   { transform: scale(SCALE) }
+  from { transform: translateZ(0) rotateX(0); opacity: 1 }
+  to   { transform: translateZ(-200px) rotateX(20deg); opacity: 0.1 }
 
 @keyframes slideBackOut
   from { transform: translateX(0) }
   to   { transform: translateX(100%) }
 
-@keyframes slideBackIn
-  from { transform: scale(SCALE) }
-  to   { transform: scale(1) }
-
-
-// @keyframes slideOut
-//   from { transform: scale(1) }
-//   to   { transform: translateZ(-200px) rotateX(20deg); opacity: 0.1 }
-
 // @keyframes slideBackIn
-//   from { transform: translateZ(-200px) rotateX(20deg); opacity: 0.1 }
+//   from { transform: scale(SCALE) }
 //   to   { transform: scale(1) }
+@keyframes slideBackIn
+  from { transform: translateZ(-200px) rotateX(20deg); opacity: 0.1 }
+  to   { transform: translateZ(0) rotateX(0); opacity: 1 }
+
