Changes on styles

--- a/src/stylesheets/lungo.layout.styl
+++ b/src/stylesheets/lungo.layout.styl
@@ -28,6 +28,7 @@ body
       box-flex(0)
       z-index: 3
       position: relative
+
     & > header
       ordinal-group(1)
     & > article
@@ -48,7 +49,8 @@ body
       & > .title
         z-index: -1
         float: left
-        font-size: FONT_SIZE_BIG
+        // font-size: FONT_SIZE_BIG
+        font-size: 1.25em
         box-flex(1)
         &.centered
           position: absolute
