--- a/src/stylesheets/theme/__init.styl
+++ b/src/stylesheets/theme/__init.styl
@@ -22,3 +22,4 @@ FORM_color          = darken(#e5e5e5, 5%)
 FORM_border         = 2px
 FORM_border_radius  = (BORDER_radius * FORM_border)
 /* -------------------------- BUTTON -------------------------- */
+SHADOW              = rgba(0,0,0,0.15)
