--- a/src/stylesheets/theme/theme.base.styl
+++ b/src/stylesheets/theme/theme.base.styl
@@ -14,6 +14,7 @@ body
   color: COLOR
   font: 14px/1.25 "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
   font-weight: 400
+  letter-spacing: -0.025em
 
   & .text
     &.thin
