--- a/src/stylesheets/theme/theme.widget.button.styl
+++ b/src/stylesheets/theme/theme.widget.button.styl
@@ -11,18 +11,10 @@
   &, abbr
     font-weight: 600
 
-section header
-  & .button, button
-    color: #fff
-    // background-color: lighten(THEME, 10%)
-    box-shadow: inset 0 0 0 2em rgba(0,0,0,0.05), inset 0 0 1px rgba(0,0,0,0.1)
-    &:active
-      background-color: darken(THEME, 25%)
-      box-shadow: none
-
 article
   & .button, button
-    border-radius (BORDER_radius * 2)
+    // border-radius (BORDER_radius * 2)
+    border-radius BORDER_radius
     color: #fff !important
 
     box-shadow: inset 0 0.1em 0 rgba(255,255,255,0.1), inset 0 -0.15em 0 rgba(0,0,0,0.2), 0 0.15em 0 rgba(0,0,0,0.075)
