--- a/src/stylesheets/theme/theme.widget.styl
+++ b/src/stylesheets/theme/theme.widget.styl
@@ -14,7 +14,7 @@
   font-weight: 700
   box-shadow inset 0 0.1em rgba(255,255,255,0.2), 0 0.1em rgba(0,0,0,0.25)
   &.count
-    background-color: DANGER
+    background-color: THEME
     aside a:not(.active) &,  footer a:not(.active) &, [data-control="groupbar"] a:not(.active) &
       background-color: lighten(COLOR, 20%)
 
