Remove unnecesary attributes

--- a/src/stylesheets/lungo.animation.slide.styl
+++ b/src/stylesheets/lungo.animation.slide.styl
@@ -17,17 +17,17 @@ SCALE = .8
     vendor(animation-name, slideBackOut)
 
 @keyframes slideIn
-  from { transform: translateX(100%); opacity: 0 }
-  to   { transform: translateX(0); opacity: 1 }
+  from { transform: translateX(100%);}
+  to   { transform: translateX(0);}
 
 @keyframes slideOut
   from { transform: scale(1); opacity: 1 }
-  to   { transform: scale(SCALE); opacity: 0 }
+  to   { transform: scale(SCALE);}
 
 @keyframes slideBackOut
-  from { transform: translateX(0); opacity: 1 }
-  to   { transform: translateX(100%); opacity: 0 }
+  from { transform: translateX(0); }
+  to   { transform: translateX(100%); }
 
 @keyframes slideBackIn
-  from { transform: scale(SCALE); opacity: 0 }
-  to   { transform: scale(1); opacity: 1 }
+  from { transform: scale(SCALE);}
+  to   { transform: scale(1);}
