--- a/src/stylesheets/lungo.layout.styl
+++ b/src/stylesheets/lungo.layout.styl
@@ -88,10 +88,10 @@ body
   /* ================================ SECTION ================================ */
   /* ========================================================================= */
   & > section
-    z-index: 2
     width: inherit
-    &:not(.show)
-      z-index: -1
+    z-index: -1
+    &.show
+      z-index: 1
 
   /* ========================================================================= */
   /* ================================= ASIDE ================================= */
