--- a/src/stylesheets/lungo.media.tablet.styl
+++ b/src/stylesheets/lungo.media.tablet.styl
@@ -23,6 +23,8 @@
         &.show
           ordinal-group(1)
           display-box()
+        &.right
+          ordinal-group(3)
 
       &:not(.box)
         position: absolute
