Changes on theme

--- a/src/stylesheets/lungo.base.styl
+++ b/src/stylesheets/lungo.base.styl
@@ -134,8 +134,8 @@ img
   vertical-align: middle
   font-size: 0
 
-strong
-  font-weight: 600
+// strong
+//   font-weight: 600
 
 table
   border-collapse: collapse
