--- a/src/stylesheets/lungo.layout.nav.styl
+++ b/src/stylesheets/lungo.layout.nav.styl
@@ -12,14 +12,14 @@ nav
   /* ================================= HEADER ================================ */
   /* ========================================================================= */
   header &
-    & a, button /*:not(.button)*/
+    & a, button
       position: relative
       padding: 0 0.75em !important
       float: left
       height: HEADER_HEIGHT
       min-width: HEADER_HEIGHT
       & > .icon
-          font-size: 1.65em
+        font-size: 1.5em
 
     & .tag
       position: absolute
