--- a/src/stylesheets/lungo.widget.styl
+++ b/src/stylesheets/lungo.widget.styl
@@ -67,11 +67,14 @@
 
 /* ================================  TAG  ================================ */
 .tag
-  padding: 0 0.33em
+  SIZE = 20px
   font-size: FONT_SIZE_TINY
-  line-height: inherit
+  min-width: SIZE
+  height: SIZE
+  line-height: SIZE !important
   text-align: center
   z-index: 1
+  display: inline-block
 
 
 /* ================================  .LAYOUT  ================================ */
