--- a/src/stylesheets/theme/theme.widget.button.styl
+++ b/src/stylesheets/theme/theme.widget.button.styl
@@ -7,24 +7,15 @@
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
 
-.button, button
-  &, abbr
-    font-weight: 600
-
 article
   & .button, button
-    // border-radius (BORDER_radius * 2)
-    border-radius BORDER_radius
     color: #fff !important
-
-    box-shadow: inset 0 0.1em 0 rgba(255,255,255,0.1), inset 0 -0.15em 0 rgba(0,0,0,0.2), 0 0.15em 0 rgba(0,0,0,0.075)
     -webkit-font-smoothing: antialiased
-    text-shadow: 0 0.1em 0 rgba(0,0,0,0.1)
-
+    border-radius BORDER_radius
     &:hover
-        box-shadow: inset 0 0 5em rgba(0,0,0,0.15), inset 0 -0.15em 0 rgba(0,0,0,0.2), 0 0.15em 0 rgba(0,0,0,0.075)
+      box-shadow: inset 0 0 5em rgba(255,255,255,0.15)
     &:active
-      box-shadow inset 0 0 5em rgba(0,0,0,0.3), inset 0 0.15em 0 rgba(0,0,0,0.1)
+      box-shadow inset 0 0 5em rgba(0,0,0,0.3)
 
     & .icon
       opacity: 0.65
