3 examples of tablet functionality

--- a/src/stylesheets/lungo.animation.slide.styl
+++ b/src/stylesheets/lungo.animation.slide.styl
@@ -47,4 +47,7 @@ body[data-device="tablet"]
 @keyframes slideBackOutTablet
   from { transform: translateX(0); opacity: 1 }
   to   { transform: translateX(100%); opacity: 0 }
+// @keyframes slideBackOutTablet
+//   from { opacity: 1 }
+//   to   { opacity: 0 }
 
