--- a/src/stylesheets/__init.styl
+++ b/src/stylesheets/__init.styl
@@ -8,9 +8,9 @@ ASIDE_WIDTH             = 264px
 ASIDE_WIDTH_SMALL       = 64px
 ASIDE_SMALL_ICON        = 48px
 
-DEFAULT_TRANSITION      = easeOutSine
-DEFAULT_TRANSITION      = easeInCubic
-TRANSITION_TIME         = 400ms
+DEFAULT_TRANSITION      = cubic-bezier(0.645, 0.045, 0.355, 1.000)
+TRANSITION_TIME         = 500ms
+
 
 FONT_SIZE_TINY          = 11px
 FONT_SIZE_SMALL         = 0.9em
