Changes in footer and nav

--- a/src/stylesheets/theme/__init.styl
+++ b/src/stylesheets/theme/__init.styl
@@ -13,7 +13,7 @@ BACKGROUND          = #DFDFDF
 /* -------------------------- VARIATIONS -------------------------- */
 LIST_border         = darken(COLOR, 15%)
 NAV_LINK            = lighten(ASIDE, 25%)
-NAV_LINK_ACTIVE     = THEME
+NAV_LINK_ACTIVE     = #fff
 /* ------------------------- TRANSITION ------------------------- */
 TRANSITION_time     = 400ms
 TRANSITION_easing   = ease
