--- a/src/stylesheets/theme/theme.layout.styl
+++ b/src/stylesheets/theme/theme.layout.styl
@@ -11,10 +11,10 @@ body > section
   & > header
     background-color: THEME
 
-  & nav[data-control=groupbar], & > header
+  & > nav[data-control=groupbar], & > header
     box-shadow inset 0 -1px SHADOW, 0 1px SHADOW
 
-  & nav[data-control=groupbar], & > footer
+  & > nav[data-control=groupbar], & > footer
     background-color: ASIDE
 
   & > footer
