Button anchor no padding

--- a/src/stylesheets/lungo.widget.button.styl
+++ b/src/stylesheets/lungo.widget.button.styl
@@ -29,7 +29,6 @@
       float: right
 
   article &
-    font-size: 1.1em
     line-height: 2.5em
     &.icon
       padding: 0 0.65em
@@ -42,11 +41,15 @@
       font-size: FONT_SIZE_LARGE
     &.small
       font-size: FONT_SIZE_SMALL
+      line-height: 2.25em
     &.tiny
       font-size: FONT_SIZE_TINY
+      line-height: 2.0em
+      padding: 0 0.6em
     &.anchor
       width: 100%
       position: relative
+      padding: 0
       &:not(.icon) .icon
         position: absolute
         left: 1.0em
