--- a/src/stylesheets/lungo.base.styl
+++ b/src/stylesheets/lungo.base.styl
@@ -105,14 +105,11 @@ body
   overflow-y: visible !important
 
   // @TODO: Why??
-  /*
-  // -webkit-user-select:none
+  // -webkit-user-select: none
   // -webkit-touch-callout: none
   // -webkit-box-orient: vertical
   // -webkit-box-align: stretch
   // -webkit-tap-highlight-color: rgba(0,0,0,0)
-
-  */
   display-box()
 
   & *
@@ -135,7 +132,7 @@ img
   font-size: 0
 
 // strong
-//   font-weight: 600
+//   font-weight: bold
 
 table
   border-collapse: collapse
